[package]
name = "r34-board-downloader"
version = "0.69.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r34_api = "0.3.0"
tokio = {version = "1.37.0", features = ["macros", "rt-multi-thread"]}
reqwest = "0.12.4"
serde_json = "1.0.116"